2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Improve regexp.

2004-12-17  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-fontify-anchors): Local file is given special
	treatment for `href'. Fix match data of `href'.
	(w3m-view-this-url-1): If the points of window was treated in
	w3m-goto-url(), now reconstruct window configuration.

2004-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-update-tab-line): Wobble the window size instead
	of setting the cursor color.

2004-12-15  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m-namazu.el (w3m-namazu): Added optional argument `reload'.

2004-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkansports.el (shimbun-nikkansports-group-table):
	Remove the world-soccer group.
	(shimbun-nikkansports-from-address): Remove.
	(shimbun-nikkansports-content-start): Chnage the value.
	(shimbun-nikkansports-content-end): Ditto.
	(shimbun-get-headers): Make the from address unreachable; change
	the message-id form; extract the hour:minute data.
	(shimbun-make-contents): New function.

	* w3m-util.el (w3m-tag-regexp-of): Remove.
	(w3m-search-tag-1): New function.
	(w3m-search-tag): New macro.

	* w3m-form.el (w3m-form-parse-and-fontify): Use w3m-search-tag
	instead of w3m-tag-regexp-of.

2004-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-bbc.el (shimbun-bbc-url): Update.

2004-12-12  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Append tag
	removal: advertisement and column link.

2004-12-11  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-heise.el (shimbun-heise-get-telepolis-headers): Fixed
	bug that gave same message id to different articles.

2004-12-10  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-fontify-anchors): Use 'w3m-name-anchor2 property to
	avoid overriding 'w3m-name-anchor property.
	(w3m-search-name-anchor): Search 'w3m-name-anchor2 property if